feat: implemented login system with jwt
removed password hashing from service layer and add it to the controller layer
added two functions in the user service to get a user with id or email
created the required mock functions for testing
wrote test codes to test login controller
seperated register and login test codes in a sub folder

next: implement get authenticated user with the jwt token
