# packages/server-api/src/api/controllers/auth-controller.js
@@ -1,15 +1,22 @@
+const bcrypt = require('bcrypt');
+const jwt = require('jsonwebtoken');
 const {
   store: storeUser,
   remove: removeUser,
+  _getUserRawObjectByEmail,
 } = require('../services/user-service');
 const { store: storeProfile } = require('../services/profile-service');
+const NotFoundError = require('../errors/api-errors/NotFoundError');
+const UnauthorizeError = require('../errors/api-errors/UnauthorizeError');
+const InternalServerError = require('../errors/api-errors/InternalServerError');
 
 const register = async (req, res, next) => {
   const { firstName, lastName, email, password } = req.body;
   let user = null;
 
   try {
-    user = await storeUser({ email, password });
+    const hashedPassword = await bcrypt.hash(password, 10);
+    user = await storeUser({ email, password: hashedPassword });
   } catch (err) {
     return next(err);
   }
@@ -29,4 +36,37 @@ const register = async (req, res, next) => {
   return res.status(201).json({ message: 'Account created successfully' });
 };
 
-module.exports = { register };
+const login = async (req, res, next) => {
+  const { email, password } = req.body;
+  let user = null;
+  try {
+    user = await _getUserRawObjectByEmail(email);
+    if (!user) throw new UnauthorizeError('Invalid credentials');
+    const isMatched = await bcrypt.compare(password, user.password);
+    if (!isMatched) throw new UnauthorizeError('Invalid credentials');
+  } catch (err) {
+    if (err instanceof NotFoundError) {
+      return next(new InternalServerError(err.message));
+    }
+    return next(err);
+  }
+
+  try {
+    const token = await jwt.sign(
+      {
+        id: user._id,
+        email: user.email,
+      },
+      process.env.JWT_SECRET || 'superman',
+      {
+        expiresIn: '2d',
+        // eslint-disable-next-line comma-dangle
+      }
+    );
+    return res.status(200).json({ message: 'Login successful', token });
+  } catch (err) {
+    return next(err);
+  }
+};
+
+module.exports = { register, login };
